# bottle

./: .ENV_TEMPLATE  .dockerignore  .gitignore  Dockerfile  Dockerfile.main  FILEPATHS_TEMPLATE.yaml  PULL_REQUEST_TEMPLATE.md  README.md  compose.yaml  env.template  environment.yml  pyproject.toml  voila.json
.claude/: CLAUDE.md
.streamlit/: secrets.toml.example
artifacts/: .bash_history  241021_biocasp_issues.xlsx  250609_bottle_25_expansions.xlsx  250729_bottle_expansions.xlsx  4228703247252781668.txt  agile_biofoundry.tsv  dvl_mvl_enzymes.csv  eq_uris.uri  expansion_tracking.csv  mevalonate_pathway.json  mevalonate_pathway_neutralized.json  operator_mapping_sprhea_v3_min_ops_part_0.tsv  operator_mapping_sprhea_v3_min_ops_part_1.tsv  operator_mapping_sprhea_v3_min_ops_part_10.tsv  operator_mapping_sprhea_v3_min_ops_part_11.tsv  operator_mapping_sprhea_v3_min_ops_part_12.tsv  operator_mapping_sprhea_v3_min_ops_part_13.tsv  operator_mapping_sprhea_v3_min_ops_part_14.tsv  operator_mapping_sprhea_v3_min_ops_part_15.tsv  operator_mapping_sprhea_v3_min_ops_part_16.tsv  operator_mapping_sprhea_v3_min_ops_part_17.tsv  operator_mapping_sprhea_v3_min_ops_part_18.tsv  operator_mapping_sprhea_v3_min_ops_part_19.tsv  operator_mapping_sprhea_v3_min_ops_part_2.tsv  operator_mapping_sprhea_v3_min_ops_part_3.tsv  operator_mapping_sprhea_v3_min_ops_part_4.tsv  operator_mapping_sprhea_v3_min_ops_part_5.tsv  operator_mapping_sprhea_v3_min_ops_part_6.tsv  operator_mapping_sprhea_v3_min_ops_part_7.tsv  operator_mapping_sprhea_v3_min_ops_part_8.tsv  operator_mapping_sprhea_v3_min_ops_part_9.tsv  operator_mapping_test_output_10.tsv  operator_mapping_test_output_20.tsv  predicted_reactions_succinate_to_mvacid_gen_4_tan_sample_n_samples_1000.pk  rheas_to_get_names.txt  starters.csv  targets.csv
artifacts/.jupyter/: migrated
artifacts/coa_mutase_paths/: 250912_3hpa_enzymes.csv  250912_3hpa_paths.csv  3hpa_paths.cdxml  other_deaminases.cdxml  unique_smiles_for_chemdraw.txt
artifacts/coreactants/: metacyc_coreactants_carbonyl_free.tsv
artifacts/known/: known_compounds.parquet  known_reactions.parquet
artifacts/operator_mapping/: operator_mapping_sprhea_v3_imt_ops.tsv  operator_mapping_sprhea_v3_imt_ops_new.tsv  operator_mapping_sprhea_v3_min_ops.tsv
artifacts/presentations/: ~$240708_bottle_dora_checkin.pptx
artifacts/processed_expansions/: found_paths.json  predicted_reactions.json
artifacts/pwy_xls/: .~lock.ccm_v0_to_hopa_gen_3_tan_sample_1_n_samples_1000.xlsx#  .~lock.ccm_v0_to_hopa_gen_4_tan_sample_1_n_samples_1000.xlsx#  .~lock.ccm_v0_to_mvacid_gen_4_tan_sample_1_n_samples_1000.xlsx#  (+11 more)
artifacts/rules/: jnimt_reverses.json
base/: Dockerfile  Makefile  jchem_linux_24.3.2.deb  vm_spec.yaml
conf/: analyze_structures.yaml  analyze_thermo.yaml  construct_known_reaction_network.yaml  draw_reactions.yaml  expand.yaml  extract_am_rxns.yaml  linear_pathfinding.yaml  mechanism_processing.yaml  parse_expansion.yaml  retrosynthesis.yaml
data/: molecules_in_pubchem.txt  molecules_with_structure.txt  test_dgrs.pk  test_thermo_multi.pk
logs/: errlog  errlog_validation_jni_uniprot  outlog  outlog_validation_jni_uniprot
notebooks/: abf.ipynb  akg_figures_bottle_dora_workshop.ipynb  alt_rules_akg_free.ipynb  asset_storage_explo.ipynb  car_investigation.ipynb  carbonyl_research_task.ipynb  change_img_dsts.ipynb  clean_known_rxns_jni.ipynb  coa_mutase_paths.ipynb  combo_expansion.ipynb  diff_file_size.ipynb  drawing.ipynb  eg_rxn.xml  examine_analogue_mapping.ipynb  examine_swissprot_rhea.ipynb  examples.ipynb  expansion_prep.ipynb  explain_mcs_figs.ipynb  explore_protect_rc_technique.ipynb  feasibility_v_rcmcs.ipynb  fix_taut_enumerator.ipynb  foo.ipynb  foo.txt  for_chemdraw.ipynb  get_targets_for_krs_find_paths.ipynb  hopa_shortlist.ipynb  illustrative_figures.ipynb  inspect_problem_pred_rxns.ipynb  interactive_deliverable.ipynb  metamdb_atom_mappings.ipynb  mine_targeted_list.ipynb  mkfigs.ipynb  new_path_wrangling.ipynb  operator_mapping_cleanup.ipynb  operator_reverses.ipynb  path_viewer.ipynb  pickaxe_prep.ipynb  pull.ipynb  rank_operators_by_kr_maps.ipynb  rdkit_tutorial_pk.ipynb  (+10 more)
path_viewer/: app.py  backup_scheduler.py  components.py  list_view.py
scripts/: 02_calc_pathway_thermo.py  02_process_reported_rxns_w_thermo_chunks.py  Untitled.ipynb  analyze_expansions.ipynb  analyze_mevalonate_pwy.ipynb  analyze_paths.py  analyze_pathways.py  analyze_structures.py  analyze_thermo.py  backup_feedback.sh  batch.sh  batch_submit.py  cat_pdfs.sh  clean_known_rxns_jni.ipynb  construct_known_reaction_network.py  create_dev_db.py  dgrs.py  download_enzymes.py  download_rhea.py  draw_chem.ipynb  draw_reactions.py  eQ_sqlite_to_postgres.load  entrypoint.sh  errlog  examine_uniprot_reaction_data.ipynb  expand.py  explain_mcs_figs.ipynb  extract_am_rxns.py  find_pathways.ipynb  foo.json  foo.pkl  initialize_configs.py  linear_pathfinding.py  make_pathways.ipynb  map_operators.py  map_operators_mp.py  mdf.py  mechanism_processing.py  one_batch.sh  outlog  (+29 more)
src/: __main__.py  chem_draw.py  cheminfo_utils.py  cli.py  config.py  constants.py  data.py  eq_patch.py  equilibrator_integration.py  expansion.py  feasfilter.py  local_compound_cache.py  molgpka.py  molgpka_opam2.py  network.py  operator_mapping.py  pathway_utils.py  pickaxe_processing.py  pka_plugins.py  pka_plugins_opam2.py  post_processing.py  rcmcs.py  reference1.py  reference2.py  rxn_ctr_mcs.py  schemas.py  smarts.py  temp_cpds.pk  thermo.py  utils.py  widgets.py
src.egg-info/: SOURCES.txt
tests/: test_constants.py  test_feedback.py  test_smarts.py  test_utils.py
(+50094 files in other folders)
