[tool.poetry]
name = "bottle"
version = "0.1.0"
description = ""
authors = [
    "Stefan Pate <stefan.pate@northwestern.edu>",
    "Pavel Katsev <pasha@u.northwestern.edu>"
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.2.2"
rdkit = "2024.9.5"
networkx = "3.5"
tqdm = "^4.66.4"
cvxpy = "^1.5.2"
sqlalchemy = "^2.0.31"
setuptools = "^70.1.1"
matplotlib = "^3.9.1"
svgutils = "^0.3.4"
keras = "^3.5.0"
ipykernel = "^6.29.5"
pint = "0.24.4"
dora-xgb = "^1.10"
minedatabase = {git = "https://github.com/stefanpate/pickaxe", rev = "py_upgrade"}
polars = "^1.30.0"
hydra-core = "^1.3.2"
equilibrator-api = "^0.6.0"
equilibrator-assets = "^0.6.0"
streamlit = "1.48"
torch-geometric = "^2.7.0"
torch = "^2.10.0"
numpy = ">=1.26,<2"
ergochemics = "^0.1.2"

[tool.poetry.group.dev.dependencies]
findimports = "^2.5.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.27.0"
memory-profiler = "^0.61.0"


[tool.poetry.group.path_viewer.dependencies]
streamlit = "1.48"
polars = "^1.30.0"
rdkit = "2024.9.5"
svgutils = "^0.3.4"
numpy = ">=1.26,<2"

[tool.poetry.scripts]
bottle = "src.__main__:main"

[tool.poe]
envfile = ".env"

[tool.poe.tasks]
build-image.shell = """
    docker build -t stefanpate/path-viewer . \
        --build-context casp=${CASP_STUDY_ROOT} \
        --build-context known=${KNOWN_BIOCHEM_ROOT}
"""
push-image.shell = "docker push stefanpate/path-viewer"
run-docker.shell = "docker run -p 8501:8501 stefanpate/path-viewer"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
